--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kanbanator",
-  "homepage": ".",
+  "homepage": "https://dd-duszynski.github.io/kanbanator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
